--- a/homeusuario/simulados/style.css
+++ b/homeusuario/simulados/style.css
@@ -281,7 +281,7 @@ main {
   left: 0;
   width: 240px;
   height: calc(100% - 80px);
-  background-color: #f0c5a5;
+  background-color: #ebc3a9;
   padding: 20px;
   box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
   z-index: 4;
